# pyhat-fastapi

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/static/js/: htmx.min.js
app/templates/: main.html
app/templates/shared/: base.html
app/views/: __init__.py  home.py
