[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mario Munoz", email = "pythonbynight@gmail.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "jinja2>=3.1.2",
    "jinja2-fragments>=0.3.0",
    "pytailwindcss>=0.2.0",
    "pydantic-settings>=2.0.2",
    "asgi-htmx>=0.1.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-s"
    ]

testpaths = "tests"
asyncio_mode = "auto"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["B", "E", "F", "Q", "W"]

src = ["app", "tests"]
line-length = 88
target-version = "py311"

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Disable autofix for unused imports
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.24.1",
]
lint = [
    "ruff>=0.0.275",
    "black>=23.3.0",
]